Use marked library for parsing instead of a parser generator

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "~1.4",
     "angular-animate": "~1.4",
     "normalize.css": "~3.0",
-    "ace-builds": "~1.2"
+    "ace-builds": "~1.2",
+    "marked": "~0.3"
   }
 }
