--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "bower": "~1.5",
-    "grunt": "~0.4",
-    "jison": "~0.4",
-    "grunt-jison": "~1.3"
+    "bower": "~1.5"
   }
 }
